day3/partone impl WiP